Bug 95031 - Fileopen: Incorrect paragraph spacing 0.49cm above and below when Auto spacing in DOCX bullets
Summary: Fileopen: Incorrect paragraph spacing 0.49cm above and below when Auto spacin...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: All All
: medium minor
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.3.0 target:5.2.4
Keywords: bibisected, bisected, filter:docx, regression
: 95851 102205 (view as bug list)
Depends on:
Blocks: DOCX-Paragraph
  Show dependency treegraph
 
Reported: 2015-10-14 02:50 UTC by Matthew Holloway
Modified: 2021-05-31 13:18 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
Paragraph 12's bulleted list (23.83 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2015-10-14 02:50 UTC, Matthew Holloway
Details
How msword renders the paragraph spacing (16.80 KB, image/png)
2015-10-14 02:52 UTC, Matthew Holloway
Details
How Libreoffice renders the paragraph spacing (29.87 KB, image/png)
2015-10-14 02:55 UTC, Matthew Holloway
Details
0cm and 0pt spacing in Microsoft Office 2013 (57.11 KB, image/png)
2015-10-14 03:26 UTC, Matthew Holloway
Details
Test case for spacing (21.26 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2016-10-07 13:45 UTC, Timur
Details
test case compare MSO LO.jpg (82.38 KB, image/jpeg)
2016-10-07 13:52 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matthew Holloway 2015-10-14 02:50:04 UTC
Created attachment 119580 [details]
Paragraph 12's bulleted list

In the attached document at paragraph 12 (below the heading of "Compliance"), the bulleted list is rendered with paragraph spacing of 0.49cm whereas Microsoft Office 2013 renders it with no paragraph space.
Comment 1 Matthew Holloway 2015-10-14 02:52:43 UTC
Created attachment 119581 [details]
How msword renders the paragraph spacing
Comment 2 Matthew Holloway 2015-10-14 02:55:16 UTC
Created attachment 119582 [details]
How Libreoffice renders the paragraph spacing
Comment 3 Joel Madero 2015-10-14 03:16:30 UTC
Confirmed:

LibreOffice 5.0.2.
Ubuntu 15.04 x64

Marking as:
New:
Minor - can slow down professional quality work but will not prevent it. (This is debateable and I could easily be sold on this being a normal bug);
Medium - regression

Regression Note: Older versions showed paragraph spacing of 0.02" above and below, it is now 0.19"

@Matthew - can you check Microsoft spacing and tell us what it is (in both cm and inches if possible so that it's accessible by developers in Europe and the United States). If it is 0.02" (or the equivalent) then this is a true regression and it once was correct, if instead it's 0.00" then it was never perfect but it was a lot better than it is now.


Thanks!
Comment 4 Matthew Holloway 2015-10-14 03:26:53 UTC
Created attachment 119586 [details]
0cm and 0pt spacing in Microsoft Office 2013
Comment 5 Matthew Holloway 2015-10-14 22:11:11 UTC
Hi Joel, is there any more information you need?
Comment 6 Joel Madero 2015-10-14 22:16:10 UTC
That's it - as far as I can tell it was never perfect for us but it's gotten significantly worse.

If you're willing to test older versions that would be great just to narrow down when it got worse and how good was it at a previous point. http://downloadarchive.documentfoundation.org/libreoffice/old/
Comment 7 raal 2015-10-20 11:40:55 UTC
bibisect-win32-5.0, oldest version contains bug too.
git checkout oldest: Version: 4.5.0.0.alpha0+
Build ID: 57d6b92b69a31260dea0d84fcd1fc5866ada7adb
Comment 8 raal 2015-11-30 17:57:09 UTC
Reproducible with Version: 4.2.0.0.alpha1+
Build ID: fc8f44e82de4ebdd50ac5fbb9207cd1a59a927e3
Comment 9 Robinson Tryon (qubit) 2015-12-13 12:20:18 UTC Comment hidden (obsolete)
Comment 10 Joel Madero 2015-12-14 18:09:19 UTC
Note - it went from "almost right" to "bad" to "much worse" - this bibisect is from the "almost right" to the "bad" stage (0.02" turned into 0.07")
 10a508c66848944760e8ff2b4f76bd9c6da85c9e is the first bad commit
commit 10a508c66848944760e8ff2b4f76bd9c6da85c9e
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Thu Oct 17 07:55:45 2013 +0000

    source-hash-911186d98f06b43d4563b401244e2cc216b76f33
    
    commit 911186d98f06b43d4563b401244e2cc216b76f33
    Author:     Markus Mohrhard <markus.mohrhard@googlemail.com>
    AuthorDate: Mon May 27 01:42:46 2013 +0200
    Commit:     Markus Mohrhard <markus.mohrhard@googlemail.com>
    CommitDate: Mon May 27 01:45:34 2013 +0200
    
        remove chart listener when chart is deleted, fdo#64639
    
        Change-Id: I7ebf75f49c89edcb0bba3a597ba24ac1c0a655ef

:100644 100644 a387ff91c3848be8d8235a8b0a29b096f40f3d13 21449c7d3372ad68e3be2a3f5c2ed81bf697267c M	ccache.log
:100644 100644 d0500a84fd70bb88043180bf56a26ae417a23717 08e1f16a7ce22a68b6f2d7716dbb0b3d8be71649 M	commitmsg
:100644 100644 6647aeb3429df04df5e2a942afd5f253dbae7829 66db214d42fb5377e5b2887af7b922ac9224535e M	dev-install.log
:100644 100644 a4990d0024cbf11a17e00c2b9b3c773c159899e8 735ce05b08d9a0ae2e6ab796f57f1386ecd858d6 M	make.log
:040000 040000 6004b31ecdffff2b247e605b8ee72d5102dbbf49 416191e10ac4fcc45a4bdc78425ed475ee4cebed M	opt

# bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect start 'latest' 'oldest'
# bad: [e02439a3d6297a1f5334fa558ddec5ef4212c574] source-hash-6b8393474974d2af7a2cb3c47b3d5c081b550bdb
git bisect bad e02439a3d6297a1f5334fa558ddec5ef4212c574
# good: [8f4aeaad2f65d656328a451154142bb82efa4327] source-hash-1885266f274575327cdeee9852945a3e91f32f15
git bisect good 8f4aeaad2f65d656328a451154142bb82efa4327
# good: [9995fae0d8a24ce31bcb5e9cd0459b69cfbf7a02] source-hash-8600bc24bbc9029e92bea6102bff2921bc10b33e
git bisect good 9995fae0d8a24ce31bcb5e9cd0459b69cfbf7a02
# good: [8ad82bc1416a07501651e8d96fe268e47d3931d3] source-hash-13821254f88d2c5488fba9fe6393dcf4ae810db4
git bisect good 8ad82bc1416a07501651e8d96fe268e47d3931d3
# good: [d084d250b04446535ca1d7c29cf2062e6bd042b3] source-hash-688f72e3a2c3ef923389bbd21f6aea3afe1114db
git bisect good d084d250b04446535ca1d7c29cf2062e6bd042b3
# good: [c2069a369d738078124812312d51f21ea1ce2421] source-hash-f160e4935c474a5293b3d3c11b3d538efb4767a0
git bisect good c2069a369d738078124812312d51f21ea1ce2421
# bad: [a0f20bc04a32a7791ba765d2de2f44f1b74033d1] source-hash-1de66ba440855050a794b3b2a8647c1b02c210b8
git bisect bad a0f20bc04a32a7791ba765d2de2f44f1b74033d1
# bad: [10a508c66848944760e8ff2b4f76bd9c6da85c9e] source-hash-911186d98f06b43d4563b401244e2cc216b76f33
git bisect bad 10a508c66848944760e8ff2b4f76bd9c6da85c9e
# good: [4143274a9dca036358581c74fbeb91ec9e246b1a] source-hash-f2321c529adf6d4a455742c30fb75fbe3f7efe02
git bisect good 4143274a9dca036358581c74fbeb91ec9e246b1a
# first bad commit: [10a508c66848944760e8ff2b4f76bd9c6da85c9e] source-hash-911186d98f06b43d4563b401244e2cc216b76f33
Comment 11 Xisco Faulí 2016-10-06 16:22:33 UTC
Regression introduced by

author	Miklos Vajna <vmiklos@suse.cz>	2013-08-28 09:43:36 (GMT)
committer	Miklos Vajna <vmiklos@suse.cz>	2013-08-28 10:06:53 (GMT)
commit de516780bf2d5f74afe643033bfc528c53013902 (patch)
tree 02d36979e81874a77f06601b736c7baf8c5414bd
parent 279ff2e03371542d014bf281e73282ba8080cf6b (diff)

bnc#816593 DOCX import: let w:before not overwrite w:beforeAutospacing

And do the same for w:after / w:afterAutospacing. The spec says that if
w:beforeAutospacing is read, w:before should be ignored, this implies
that if we already had w:beforeAutospacing, w:before should not
overwrite the already existing top margin.

Adding Cc: to Miklos Vajna
Comment 12 Xisco Faulí 2016-10-06 16:29:31 UTC
*** Bug 102205 has been marked as a duplicate of this bug. ***
Comment 13 Timur 2016-10-07 13:45:22 UTC
Created attachment 127860 [details]
Test case for spacing

I attach DOCX test case for spacing, instead of Paragraph 12's bulleted list.
Problem comes from Auto spacing in MSO which LO renders wrong as 0.49cm above and below.
Attachment 119586 [details] here is not right because it shows style with 0 spacing and not direct formatting here with Auto spacing. 
Matthew, I'll delete those attachments. Next time please attach a minimum test case and a single image for a comparison, please. 


Bug 95851 with attachment 120574 [details] looks similar, so I'll mark as duplicate. Attachment 120575 [details] is comparisson MSO and LO.
There I wrote I wouldn't call it a regression, because previous behavior was different.
Comment 14 Timur 2016-10-07 13:48:27 UTC
*** Bug 95851 has been marked as a duplicate of this bug. ***
Comment 15 Timur 2016-10-07 13:52:28 UTC
Created attachment 127861 [details]
test case compare MSO LO.jpg
Comment 16 Xisco Faulí 2016-10-10 17:37:21 UTC
*** Bug 77417 has been marked as a duplicate of this bug. ***
Comment 17 Commit Notification 2016-10-18 08:58:57 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c486e875de7c8e845594f5043a37ee8800865782

tdf#95031 DOCX import: auto spacing inside numbering means no spacing

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Commit Notification 2016-11-03 21:31:17 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=806e323271982c8975ec2904219c6f136aa20eea&h=libreoffice-5-2

tdf#95031 DOCX import: auto spacing inside numbering means no spacing

It will be available in 5.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.