tdf#95031 DOCX import: auto spacing inside numbering means no spacing

The WW8 import has code for this in SwWW8ImplReader::AppendTextNode(),
with lots of corner-cases. Not all of that is implemented here yet, but
the bullet list in the bugdoc already looks correct now.

(cherry picked from commit c486e875de7c8e845594f5043a37ee8800865782)

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport9.cxx

Reviewed-on: https://gerrit.libreoffice.org/30291
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 806e323271982c8975ec2904219c6f136aa20eea)

Change-Id: I9499bfa4d8d7fcc425d7b95e64987258c099f7f2