sw/qa/extras/ooxmlexport/ooxmlexport9.cxx
@@ -39,6 +39,12 @@ DECLARE_OOXMLEXPORT_TEST(testTdf92045, "tdf92045.docx")
     CPPUNIT_ASSERT_EQUAL(false, getProperty<bool>(getRun(getParagraph(1), 1), "CharFlash"));
 }
 
+DECLARE_OOXMLEXPORT_TEST(testTdf95031, "tdf95031.docx")
+{
+    // This was 494, in-numbering paragraph's automating spacing was handled as visible spacing, while it should not.
+    CPPUNIT_ASSERT_EQUAL(static_cast<sal_Int32>(0), getProperty<sal_Int32>(getParagraph(2), "ParaBottomMargin"));
+    CPPUNIT_ASSERT_EQUAL(static_cast<sal_Int32>(0), getProperty<sal_Int32>(getParagraph(3), "ParaTopMargin"));
+}
 
 CPPUNIT_PLUGIN_IMPLEMENT();
 
